feat: port Patchouli to Minecraft 1.21.11 Fabric
Complete the Fabric-only Minecraft 1.21.11 port, including rendering, recipe synchronization, build modernization, Chinese public documentation, GameTest coverage, GitHub Release automation, and static Maven publishing.